# native_model

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  README.md  README.md.skt.md  build.rs  cargo_publish.sh  justfile  package-lock.json  package.json  release.config.js  renovate.json  version_update.sh
.github/workflows/: build_and_test_release.yml  clippy_check.yml  conventional_commits.yml  fmt_check.yml
benches/: overhead.rs  overhead_on_bincode.rs  prepend_bytes.rs
native_model_macro/: Cargo.toml  README.md
native_model_macro/src/: lib.rs
native_model_macro/src/method/: decode_body.rs  decode_upgrade_body.rs  encode_body.rs  encode_downgrade_body.rs  id.rs  mod.rs  version.rs
src/: header.rs  lib.rs  model.rs  wrapper.rs
src/codec/: bincode_1_3.rs  bincode_2.rs  bincode_2_rc.rs  mod.rs  postcard_1_0.rs  rmp_serde_1_3.rs
tests/: _experiment.rs  macro.rs  macro_decode_decode_upgrade.rs  macro_encode_decode.rs  native_model_from.rs  native_model_try_from.rs
tests/example/: example_define_model.rs  example_main.rs  mod.rs
tests/example/default_codec/: mod.rs
tests/example/encode_decode/: bincode.rs  bincode_serde.rs
tests_crate/: Cargo.toml
tests_crate/tests/: _experiment.rs  macro.rs  macro_decode_decode_upgrade.rs  macro_encode_decode.rs  native_model_from.rs  native_model_try_from.rs
tests_crate/tests/example/: example_define_model.rs  example_main.rs
tests_crate/tests/example/custom_codec/: bincode.rs  bincode_serde.rs  mod.rs
tests_crate/tests/example/default_codec/: bincode_1_3.rs  bincode_2.rs  bincode_2_rc.rs  default.rs  mod.rs  postcard_1_0.rs
