[package]
name = "native_model"
version = "0.3.30"
authors = ["Vincent Herlemont <vincent@herlemont.fr>"]
edition = "2021"
description = "A thin wrapper around serialized data which add information of identity and version."
license = "MIT"
repository = "https://github.com/vincent-herlemont/native_model"
readme = "README.md"
build = "build.rs"
keywords = ["serialization", "interoperability", "data-consistency", "flexibility", "performance"]
categories = ["data-structures", "encoding", "rust-patterns"]

[workspace]
members = ["native_model_macro"]

[dependencies]
zerocopy = { version = "0.7.31", features = [ "derive"] }
thiserror = "1.0"
anyhow = "1.0"
native_model_macro = { version = "0.3.30", path = "native_model_macro" }

serde = { version = "1.0", features = ["derive"], optional = true }
bincode_1_3 = { package = "bincode", version = "1.3", optional = true }
bincode_2_rc = { package = "bincode", version = "2.0.0-rc.3", features = ["serde"], optional = true }
postcard_1_0 = { package = "postcard", version = "1.0", features = ["alloc"], optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5.1" }
skeptic = "0.13"

[features]
default = ["serde", "bincode_1_3"]

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "overhead_on_bincode"
harness = false

[[bench]]
name = "prepend_bytes"
harness = false

[build-dependencies]
skeptic = "0.13"