[package]
name = "native_model_macro"
version = "0.6.2"
authors = ["Vincent Herlemont <vincent@herlemont.fr>"]
edition = "2018"
description = "A procedural macro for native_model"
license = "MIT"
repository = "https://github.com/vincent-herlemont/native_model"
readme = "README.md"


[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.81"
